--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -2,7 +2,7 @@ Authors
 =======
 
 Scisco https://github.com/scisco
-Marc Farra https://github.com/developmentseed/landsat-util/commits/v0.5?author=kamicut
+Marc Farra https://github.com/kamicut
 Alex Kappel https://twitter.com/alex_kappel
 Eric Miller https://github.com/millerEric
 Yuriy Czoli https://github.com/YKCzoli
