--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -3,6 +3,7 @@ Authors
 
 Scisco https://github.com/scisco
 Marc Farra https://github.com/kamicut
+Drew Bollinger https://github.com/drewbo
 Alex Kappel https://twitter.com/alex_kappel
 Eric Miller https://github.com/millerEric
 Yuriy Czoli https://github.com/YKCzoli
