--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changes
 =======
 
+0.6.4 (2015-05-29)
+------------------
+- New documentation
+- Deployed to readthedocs
+- Automate deployment to pypi
+
 0.6.3 (2015-04-29)
 ------------------
 - adjust lower rescaling bound, closes #66 for now
