--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,12 +1,16 @@
 Changes
 =======
 
-0.6.4 (2015-05-29)
+0.7.0 (2015-05-29)
 ------------------
 - New documentation
 - Deployed to readthedocs
 - Automate deployment to pypi
 - Adds docker support
+- skip unzipping if images already unzipped
+- add force-unzip flag
+- fix a bug where multiple downloads was not followed by multiple process #81
+- fix a bug where if scenes was downloaded from google instead of aws, process failed #84
 
 0.6.3 (2015-04-29)
 ------------------
