--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,7 @@ Changes
 - add force-unzip flag
 - fix a bug where multiple downloads was not followed by multiple process #81
 - fix a bug where if scenes was downloaded from google instead of aws, process failed #84
+- download band 8 when pansharpen fixes #73
 
 0.6.3 (2015-04-29)
 ------------------
