--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,15 @@
 Changes
 =======
 
+0.9.0 (2015-10-23)
+------------------
+- Improved pansharpening
+- Use BQA bands for cloud/snow coverage and use in color correction
+- Fix a bug in NDVI process where novalues appeared in the image
+- Add support for different NDVI color maps (three included)
+- Add support for image clipping using the new `--clip` flag
+- Multiple bug fixes
+
 0.8.0 (2015-09-22)
 ------------------
 - Improved docs
