update changes and authors

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,11 @@
 Changes
 =======
 
-0.12.2 (2016-02-18)
+0.13.0 (2016-03-25)
+------------------
+- Python 3.5 support
+
+0.12.2 (2016-03-24)
 ------------------
 - Fix for #167
 - Fix for #145
